@@ -36,43 +36,43 @@ public class EnvironmentTest extends TestCase
 		HttpServletRequest request = new EnvironmentRequest(CopTest.ENVIRONMENT);
 		{
 			final TestCop cop = new TestCop();
-			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html", cop.getAbsoluteURL(request));
 			assertEquals("test.html", cop.toString());
 		}
 		{
 			final TestCop cop = new TestCop("ding");
-			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=ding", cop.toString());
 		}
 		{
 			final TestCop cop = new TestCop("ding", "dong");
-			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding&param2=dong", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding&param2=dong", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=ding&param2=dong", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=ding&param2=dong", cop.toString());
 		}
 		{
 			final TestCop cop = new TestCop(0.0, "shop/hallo.html");
-			assertEquals("http://host.exedio.com/contextPath/servletPath/shop/hallo.html", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/shop/hallo.html", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/shop/hallo.html", cop.getAbsoluteURL(request));
 			assertEquals("shop/hallo.html", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(null);
-			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(false);
-			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(true);
-			assertEquals("https://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("https://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("https://host.exedio.com/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
@@ -89,19 +89,19 @@ public class EnvironmentTest extends TestCase
 		assertEquals(ENVIRONMENT_8080, Cop.getEnvironment(request));
 		{
 			final HttpsCop cop = new HttpsCop(null);
-			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(false);
-			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(true);
-			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
@@ -114,19 +114,19 @@ public class EnvironmentTest extends TestCase
 		assertEquals(ENVIRONMENT_8443, Cop.getEnvironment(request));
 		{
 			final HttpsCop cop = new HttpsCop(null);
-			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(false);
-			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("http://host.exedio.com:8080/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
 		{
 			final HttpsCop cop = new HttpsCop(true);
-			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.toURL(request));
+			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.getURL(request));
 			assertEquals("https://host.exedio.com:8443/contextPath/servletPath/test.html?param1=value1", cop.getAbsoluteURL(request));
 			assertEquals("test.html?param1=value1", cop.toString());
 		}
